# PAOO

./: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
src/: CMakeLists.txt  main.cpp
src/person/: CMakeLists.txt  angajat.cpp  angajat.hpp  person.cpp  person.hpp  student.cpp  student.hpp
src/tutorial/: CMakeLists.txt  tutorial.cxx  tutorial.hpp
